# snippets

./: .gitignore  Cargo.toml  README.md  README_zh.md
embedding_lib/: Cargo.toml
embedding_lib/src/: all_minilm_v2.rs  e5_base_v2.rs  error.rs  granite_english_r2.rs  granite_multilingual.rs  lib.rs  multilingual_e5_small.rs  mxbai_embed_v1.rs  paraphrase_multilingual_minilm_l12_v2.rs
embedding_models/: README.md
snippets_core/: Cargo.toml  build.rs
snippets_core/src/: lib.rs  main.rs
snippets_core/src/api/: error.rs  mod.rs  parse_paras.rs  snip.rs  utils.rs
snippets_database/: example.snippets
